--- a/app/views/admin/type_rdvs/_type_rdv.html.erb
+++ b/app/views/admin/type_rdvs/_type_rdv.html.erb
@@ -1,11 +1,9 @@
 <div id="<%= dom_id(type_rdv) %>" class="card m-2">
   <div class="card-body">
     <div class="row align-items-center">
-      <div class="col-md-4">
-        <strong>Code:</strong> <%= type_rdv.code %>
-      </div>
-      <div class="col-md-4">
-        <strong>Durée de base:</strong> <%= type_rdv.duree_base_minutes %> minutes
+      <div class="col-md-8">
+        <strong>Nom:</strong> <%= type_rdv.code %>
+        <strong>Durée:</strong> <%= type_rdv.duree_base_minutes %> minutes
       </div>
       <div class="col-md-4 text-end">
         <%= links_record(type_rdv) %>
