--- a/app/views/public/demande_rdv/_form.html.erb
+++ b/app/views/public/demande_rdv/_form.html.erb
@@ -15,6 +15,7 @@
   <div data-controller="calendar-picker" 
        data-calendar-picker-periodes-non-disponibles-value="<%= DemandeRdv.periodes_non_disponibles.to_json %>"
        data-calendar-picker-creneaux-occupes-value="<%= DemandeRdv.creneaux_occupes_par_date.to_json %>"
+       data-calendar-picker-jours-desactives-value="<%= DemandeRdv.jours_desactives.to_json %>"
        class="mb-5">
     
     <!-- Grille Bootstrap : contenu à droite sur grand écran, pleine largeur sur petit -->
