--- a/app/views/public/pages/_reservation_essayage.html.erb
+++ b/app/views/public/pages/_reservation_essayage.html.erb
@@ -1,18 +1,14 @@
 <div class="px-4" id="reservationForm">
     <!-- Formulaire de réservation -->
     <% if @cabine_cart.any? %>
-        <% if @demande_cabine_essayage.nil? %>
-            <% @demande_cabine_essayage = DemandeCabineEssayage.new %>
-            <% if session[:cabine_cart].present? %>
-                    <% session[:cabine_cart].each do |produit_id| %>
-                    <% @demande_cabine_essayage.demande_cabine_essayage_items.build(produit_id: produit_id) %>
-                <% end %>
-            <% end %>
-        <% end %>
+        <% @demande_rdv ||= DemandeRdv.new %>
         
         <div class="collapse <%= 'show' if params[:open_form].present? %>" id="reservationFormCollapse" data-reservation-form-target="collapse">
-            <hr class="border-secondary my-2">
-            <%= render partial: "public/demande_cabine_essayages/form", locals: { demande_cabine_essayage: @demande_cabine_essayage } %>
+            <div class="p-4 bg-white d-flex flex-column" style="background-image: url('<%= image_path('/images/dessin2.png') %>'); background-size: cover; background-position: center; background-repeat: no-repeat; position: relative; height: 100vh;">
+                <div style="position: relative; z-index: 1; flex: 1; display: flex; flex-direction: column;">
+                    <%= render partial: "public/demande_rdv/form", locals: { demande_rdv: @demande_rdv, from_cabine: true } %>
+                </div>
+            </div>
         </div>
     <% end %>
 </div>
