--- a/app/views/public/demande_rdv/_form.html.erb
+++ b/app/views/public/demande_rdv/_form.html.erb
@@ -44,7 +44,7 @@
         <div class="tab-content px-2" id="rdv-tab-content">
           <!-- ÉTAPE 1 : Calendrier -->
           <div class="tab-pane fade show active" id="step1-pane" role="tabpanel" aria-labelledby="step1-tab" tabindex="0">
-              <h4 class="<%= from_cabine ? 'text-light' : 'text-dark' %> text-center fw-bold" style="letter-spacing: 0.5px;">
+              <h4 class="text-dark text-center fw-bold" style="letter-spacing: 0.5px;">
                 Sélectionnez une date
               </h4>
               <div class="mb-4 text-center">
