--- a/app/views/public/pages/_reservation_essayage.html.erb
+++ b/app/views/public/pages/_reservation_essayage.html.erb
@@ -1,10 +1,10 @@
-<div class="px-4" id="reservationForm">
+<div class="p-0 m-0" id="reservationForm">
     <!-- Formulaire de réservation -->
     <% if @cabine_cart.any? %>
         <% @demande_rdv ||= DemandeRdv.new %>
         
         <div class="collapse <%= 'show' if params[:open_form].present? %>" id="reservationFormCollapse" data-reservation-form-target="collapse">
-            <div class="p-4 bg-white d-flex flex-column" style="background-image: url('<%= image_path('/images/dessin2.png') %>'); background-size: cover; background-position: center; background-repeat: no-repeat; position: relative; height: 100vh;">
+            <div class="p-0 m-0 bg-white d-flex flex-column" style="background-image: url('<%= image_path('/images/dessin2.png') %>'); background-size: cover; background-position: center; background-repeat: no-repeat; position: relative; height: 100vh;">
                 <div style="position: relative; z-index: 1; flex: 1; display: flex; flex-direction: column;">
                     <%= render partial: "public/demande_rdv/form", locals: { demande_rdv: @demande_rdv, from_cabine: true } %>
                 </div>
